#167 Minor refactorings and formatting